# LinuxHomework1

./: .gitignore  CMakeLists.txt  LinuxHomework1.cpp  LinuxHomework1.h  README.md  functions.cpp  functions.h
